--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -3,7 +3,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="/home">
-            <span>Hostit</span>
+            <img src="../images/eagle.png" style="height: 50px;width: 50px;"></img>
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,7 +22,7 @@
                 <a class="nav-link" href="/service">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/price">Pricing</a>
+                <a class="nav-link" href="/team">Team</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact Us</a>
